debathena-kerberos-config (1.15) UNRELEASED; urgency=low

  * Switch from control.in to control (Trac: #561)
  * Bump Standards-Version to 3.9.3
  * Bump compat level to 7

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:38:38 -0400

debathena-kerberos-config (1.14) unstable; urgency=low

  [ Geoffrey Thomas ]
  * Spelling and grammar fixes.

  [ Jonathan Reed ]
  * Drop the krb4 conditionals in the rules file, we no longer have any
    krb4 releases
  * undivert /etc/krb.{realms,conf} from any previous krb4 versions (Trac:
    #1060)
  * Change debian/copyright to DEP5 format

 -- Jonathan Reed <jdreed@mit.edu>  Fri, 08 Mar 2013 14:57:43 -0500

debathena-kerberos-config (1.13) unstable; urgency=low

  * No change rebuild to pick up config-package-dev 4.13 changes

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 26 Oct 2011 18:29:44 -0400

debathena-kerberos-config (1.12) unstable; urgency=low

  * Add win.mit.edu (Trac: #1086)
  * NUMENOR.MIT.EDU is no more

 -- Jonathan Reed <jdreed@mit.edu>  Sun, 25 Sep 2011 16:01:27 -0400

debathena-kerberos-config (1.11) unstable; urgency=low

  * Fix cleanup of old apparmor diversions in the postinst.

 -- Evan Broder <broder@mit.edu>  Sat, 12 Jun 2010 21:51:39 -0400

debathena-kerberos-config (1.10) unstable; urgency=low

  [ Greg Brockman ]
  * Moved apparmor config into apparmor-config package. (Trac: #498)

  [ Evan Broder ]
  * Only reload apparmor in the postinst, not the postrm, and only if it
    was previously running. (Trac: #506)
  * Recommend the new apparmor-config package.
  * Bump Debian standards version and debhelper compatibility level.

 -- Evan Broder <broder@mit.edu>  Sat, 12 Jun 2010 21:08:31 -0400

debathena-kerberos-config (1.9) unstable; urgency=low

  * Set allow_weak_crypto = true so that krb5 1.8 will still talk to the
    ATHENA.MIT.EDU KDC. (Trac: #488)
  * Test for krb5 1.7 using krb5-user instead of krb5-clients, since
    krb5-clients is being seprated into a separate source package.
